# yuzaos

./: .gitignore  01_console.sln  01_console_2.sln  02_console_app.sln  02_console_app2.sln  02_luakernel.sln  03_luakernel.sln  03_thread.sln  04_desktop.sln  04_programming_interface.sln  05_desktop_component.sln  05_stl.sln  06_3d_programming.sln  06_desktop.sln  07_desktop.sln  07_sdl_01_tutorial.sln  07_sdl_02_game.sln  07_sdl_03_gui.sln  07_sdl_04_lua.sln  08_3d_programming.sln  09_thirdparty.sln  10_port.sln  10_sdl-advanced.sln  10_sdl-emulator.sln  10_sdl-emulator_scumm.sln  10_sdl-gui.sln  10_sdl.sln  10_sdl_etc.sln  10_sdl_game.sln  10_sdl_tutorial.sln  11_final_01_game.sln  11_final_02_emulator.sln  11_final_03_gui.sln  11_final_03_utility.sln  11_final_04_etc.sln  12_stl.sln  12_thread.sln  13_thirdparty.sln  13_thirdparty2.sln  README.md  (+7 more)
.github/workflows/: msbuild.yml
corelib/FileManager/: FileManager.cpp  FileManager.vcxproj  FileManager.vcxproj.filters  FileService.cpp  TerminalSystem.cpp  TerminalSystem.h  close.cpp  creat.cpp  dup.cpp  fileno.cpp  lseek.cpp  open.cpp  read.cpp  write.cpp
corelib/RME/: RME.vcxproj  RME.vcxproj.filters  opcode_prototypes.h  opcode_table.h  ops_alu.c  rme.c  (+15 more)
runtime/: runtime.sln
sample/console/grep/src/: Makefile.am  Makefile.in  dfa.c  dfa.h  dosbuf.c  egrep.c  esearch.c  fgrep.c  fsearch.c  getpagesize.h  grep.c  grep.h  kwset.c  kwset.h  mbsupport.h  search.c  system.h  vms_fab.c  vms_fab.h
support/: support.sln
thirdparty2/: lv_conf.h  thirdparty.sln  thirdparty2.sln
tool/: file2str.c  png2bdc.c  verinfo.c
(+3323 files in other folders)
